--- a/main_container/package.json
+++ b/main_container/package.json
@@ -24,8 +24,7 @@
     "react-toastify": "^9.1.1",
     "sass": "^1.59.3",
     "styled-components": "^5.3.9",
-    "tailwindcss": "^3.2.7",
-    "zylen-ui-lib": "^1.0.1"
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
